    "end of line" means for "^" and "$" regexps.

OCamlbuild:
- PR#6794, PR#6809: pass package-specific include flags when building C files
  (Jérémie Dimino, request by whitequark)
- GPR#208: add "asm" tag to ocamlbuild to enable flag -S
  (ygrek)
- Changed OCamlbuild's license to LGPLv2 with static linking exception.
- GPR#219: speedup target-already-built builds
  (ygrek)

Bug fixes:
- PR#3612: memory leak in bigarray read from file
  (Pierre Chambart, report by Gary Huber)
* PR#4166, PR#6956: force linking when calling external C primitives
  (Jacques Garrigue, reports by Markus Mottl and Christophe Troestler)
* PR#4539: change exception string raised when comparing functional values
  (Nicolas Braud-Santoni, report by Eric Cooper)
- PR#4832: Filling bigarrays may block out runtime
  (Markus Mottl)
- PR#5663: program rejected due to nongeneralizable type variable that
    appears nowhere
  (Jacques Garrigue, report by Stephen Weeks)
- PR#5780: Strange type variable names in error messages (GADTs)
    (only made the names more informative)
  (Jacques Garrigue, report by Sebastien Furic)
- PR#5887: move the byterun/*.h headers to byterun/caml/*.h to avoid header
    name clashes
  (Jérôme Vouillon and Adrien Nader and whitequark)
* PR#6081: ocaml should add script's directory to search path, not current
    directory
  (Thomas Leonard and Damien Doligez)
- PR#6171: Error message confusing when a type escapes its scope.
- PR#6340: Incorrect handling of \r when processing "Windows" source files
  (Damien Doligez, report by David Allsopp)
* PR#6521: {Bytes,Char,String}.escaped are locale-dependent
  (Damien Doligez, report by Jun Furuse)
- PR#6526: ocamllex warning: unescaped newline in comment string
  (Damien Doligez, report by user 'dhekir')
- PR#6341: ocamldoc -colorize-code adds spurious <br> tags to <pre> blocks
- PR#6560: Wrong failure message for {Int32,Int64,NativeInt}.of_string
  (Maxime Dénès and Gabriel Scherer)